# walletmaker.fun

./: .gitignore  Cargo.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/wasm/: package.json  solana_vanity.d.ts  solana_vanity.js  solana_vanity_bg.wasm  solana_vanity_bg.wasm.d.ts
frontend/src/app/: grinderWorker.ts  layout.tsx  page.tsx
frontend/src/components/ui/: digital-serenity-animated-landing-page.tsx  spooky-smoke-animation.tsx
src/: dashboard.html  lib.rs  main.rs  server.rs
