[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-vanity"
path = "src/main.rs"

[[bin]]
name = "solana-vanity-web"
path = "src/server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
